<resources>
    <string name="app_name">QuizSamsung</string>
    <string name="logoname">Викторина\n Взрыв мозга</string>
    <string name="input_name">Введите ваше имя</string>
    <string name="input_email">введите почту</string>
    <string name="save">сохранить</string>
    <string name="main_btn">Начать!</string>
    <string name="registration">Регистрация</string>
    <string name="next">Продолжить</string>
    <string name="ansver1">Ответ1</string>
    <string name="ansver2">Ответ2</string>
    <string name="ansver3">Ответ3</string>
    <string name="hint">Подсказка</string>
    <string name="rules">Я ознакомился с правилами и не буду пользоваться интернет-ресурсами</string>
    <string name="res">Узнать результат</string>
    <string name="result">Ваш результат:</string>
    <string name="ourresult">Ваш результат:</string>
    <string name="tru">правильно</string>
    <string name="fals">неправильно</string>
    <string name="back">вернуться в меню</string>
    <string name="rules2">Правила игры</string>
    <string name="rules1">Цель игры: набрать максимальное количество баллов. \n

После активации клавиши «Начать» начинается отсчет времени игры. На всю игру (10 вопросов) отводится 300 секунд \n

Далее на экране высвечивается первый вопрос и три варианта ответов. Если игрок не знает ответ он может воспользоваться подсказкой, активировав соответствующую клавишу. После этого на экране всплывает экран с дополнительной информацией. За правильный ответ без подсказки игрок зарабатывает 2 балла, с подсказкой 1 балл, за неправильный ответ 0 баллов. \n

После того, как игрок выберет ответ (неважно правильный или нет) — на экране высвечивается следующий вопрос и т.д. до 10-го включительно. \n

Далее возможны варианты: 300 секунд истекли, но игрок не успел до конца пройти викторину -  ему присваивается то количество очков, которое он успел набрать. Игрок  успел пройти всю викторину за 300 секунд или до того, как 300 секунд истекли — присваиваются баллы, набранные за всю игру.
</string>
</resources>